Hide movimientos button unless ready to get data and various translation fixes

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,8 @@
       body { padding: 1rem 0 }
       
       /* Hide top level divs by default */
-      body > div, #getMovimientosError, #getTransaccionesError {
+      body > div, #getMovimientosError, #getTransaccionesError,
+      #getMovimientos {
         display: none;
       }
 
